# fibonacci

./: .gitignore  COPYING  README.md  configure.ac
.github/workflows/: unit-tests.yaml
src/: .gitignore  Makefile.am  benchmark.cpp  fibonacci.cpp  fibonacci.hpp  fibonacci_test_data.cpp  fibonacci_test_data.hpp  quadratic.hpp  test.cpp
